<resources>
    <string name="app_name">GhuraGhuri</string>
    <string name="tourist_spots">Tourist Spots</string>
    <string name="search">Search...</string>
    <string name="menu">Menu</string>
    <string name="tag">Tag</string>
    <string name="description">Cox’s Bazar is a town on the southeast coast of Bangladesh. It’s known for its very long, sandy beachfront, stretching from Sea Beach in the north to Kolatoli Beach in the south. Aggameda Khyang monastery is home to bronze statues and centuries-old Buddhist manuscripts. South of town, the tropical rainforest of Himchari National Park has waterfalls and many birds. North, sea turtles breed on nearby Sonadia Island.</string>
    <string name="description_main">Description:</string>
    <string name="approximate_cost">Approximate cost:</string>
    <string name="tk">5000-7000 tk</string>
    <string name="gallery">Gallery</string>
    <string name="tour_plan">Tour plan</string>
    <string name="attractions">Attractions</string>
    <string name="hotel">Hotel</string>
    <string name="restaurant">Restaurant</string>
    <string name="atm_bank">ATM/Bank</string>
    <string name="hospital">Hospital</string>
    <string name="police_station">Police Station</string>
    <string name="speciality">Speciality</string>
    <string name="favourite_list">Favourite List</string>
    <string name="tour_history">Tour History</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="any_suggestion">Any Suggestion?</string>
    <string name="admin">Admin</string>
    <string name="log_out">Log Out</string>
    <string name="create_naccount">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in">OR Sign In</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign in</string>
    <string name="or_create_account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="let_s_go">Let\'s Go!</string>
    <string name="forget_pass_details">Provide your account\'s email through which you want to reset password</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="forgot_npassword">Forgot\npassword?</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="add_new">Add New</string>
    <string name="update">Update</string>
    <string name="place_id">Place ID</string>
    <string name="place_name">Place Name</string>
    <string name="description_input">Description</string>
    <string name="save">Save</string>
    <string name="approximate_cost_input">Approximate Cost</string>
    <string name="rating_out_of_5">Rating(out of 5)</string>
    <string name="add_another">Add another</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="_1">1/</string>
    <string name="description2">Description</string>
    <string name="account">Account</string>
    <string name="review">Review</string>
    <string name="done">Done</string>
    <string name="submit">Submit</string>
    <string name="not_now">Not Now</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="category">Category</string>
    <string name="upload_image">Upload Image</string>
    <string name="title">Title</string>
    <string name="browse">Browse</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="found_no_image">Found No Image</string>
    <string name="title_activity_maps_attraction">MapsAttraction</string>
    <string name="mobile">Mobile:</string>
    <string name="title_activity_maps_hos_pol">MapsHosPol</string>
    <string name="ratings_amp_nreviews"><![CDATA[Ratings &\nreviews]]></string>
    <string name="ratings_amp_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="no_review">No review</string>
    <string name="profile_info">Profile Info</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_no">Mobile No</string>
    <string name="plan">Plan</string>
    <string name="steps">Steps</string>
    <string name="where">Where?</string>
    <string name="what_to_do">What to do?</string>
    <string name="send_email">Send Email</string>
    <string name="write_here">Write here</string>
    <string name="feedback">Feedback</string>
    <string name="complete">Complete</string>
    <string name="no_tour_plan_added">No Tour Plan Added</string>
    <string name="shop">Shop</string>
    <string name="spots">Spots</string>
    <string name="cart">Cart</string>
    <string name="packages">Packages</string>
    <string name="blogs">Blogs</string>
    <string name="guide">Guide</string>
    <string name="user">User</string>
    <string name="agency">Agency</string>
    <string name="agency_name">Agency Name</string>
    <string name="owner_name">Owner Name</string>
    <string name="users">Users</string>
    <string name="agencies">Agencies</string>
    <string name="add_tour">Place</string>
    <string name="product">Product</string>
    <string name="orders">Orders</string>
    <string name="add_products">Add Products</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="features">Features(use numbering)</string>
    <string name="photos">Photos</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="product_list">Product List</string>
    <string name="features_details">Features:</string>
    <string name="details">Details:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="more_info">More Info.</string>
    <string name="any_specification">Any specification?</string>
    <string name="address">Address</string>
    <string name="contact_no">Contact No.</string>
    <string name="your_vlog">Your Vlog</string>
    <string name="youtube_video_id">Youtube video id</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="location">Location</string>
    <string name="vlog">Vlog</string>
    <string name="tour">Tour</string>
    <string name="bookings">Bookings</string>
    <string name="add_package">Add package</string>
    <string name="package_name">Package Title</string>
    <string name="cost">Cost</string>
    <string name="duration">Duration</string>
    <string name="whatsapp_no">Whatsapp No.</string>
    <string name="tourist_capacity">Tourist Capacity</string>
    <string name="fixed">Fixed</string>
    <string name="negotiable">Negotiable</string>
    <string name="segemnt_demo">e.g. transport, accommodation, tour plan etc. as your requirement</string>
    <string name="details2">Details</string>
    <string name="basic_info">Basic info.</string>
    <string name="message">**You must save basic info first. Then you can fill up other segments**</string>
    <string name="tour_packages">Tour Packages</string>
    <string name="contact_info">Contact info.</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="email2">Email:</string>
    <string name="phone_no">Phone no:</string>
    <string name="number_of_tourist">Number of tourist</string>
    <string name="no_bookings_pending">No bookings pending</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="zip_code">Zip Code</string>
    <string name="website_name">Website Name</string>
    <string name="your_blog">Your Blog</string>
    <string name="add_blog">Add blog</string>
    <string name="date">18/11/2023</string>
    <string name="order_id">order_id</string>
    <string name="order_list">Order List</string>
    <string name="no_orders">No Orders</string>
    <string name="chatbot">ChatBot</string>

</resources>