<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".Plan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/tour_plan"
            android:fontFamily="@font/merienda_one"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/plan_noth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/no_tour_plan_added"
            android:textSize="24sp"
            android:textColor="#FF0000"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/plan_recView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cmplt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/complete"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/start_button"
            android:padding="10dp"
            />

    </LinearLayout>


</ScrollView>