<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".BlogList">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <ProgressBar
            android:id="@+id/blog_pr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/merienda_one"
            android:text="@string/blogs"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <EditText
        android:id="@+id/search_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="Cox's Bazar"
        android:background="@drawable/search_background"
        android:drawableEnd="@drawable/ic_baseline_search_24"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="20sp"
        tools:ignore="LabelFor"
        />

    <TextView
        android:id="@+id/blog_noth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/nothing_to_show"
        android:textSize="24sp"
        android:textColor="#FF0000"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/blog_recView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>