<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".YourBlog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <ProgressBar
            android:id="@+id/blog_pr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/merienda_one"
            android:text="@string/your_blog"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_blog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button3"
        android:text="@string/add_new"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <TextView
        android:id="@+id/ublog_noth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/nothing_to_show"
        android:textSize="24sp"
        android:textColor="#FF0000"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ublog_recView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>