<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TourPlan"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/tour_plan"
        android:fontFamily="@font/merienda_one"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/text"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/part3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F5FBFB">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/steps"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baloo"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/where"
                    app:boxStrokeColor="@color/text"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/where_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/what_to_do"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    app:boxStrokeColor="@color/text"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/todo_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:textColor="@color/black"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/plan_save_btn"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/save"
                        android:textAllCaps="false"
                        android:background="@drawable/button2"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:padding="10dp"
                        android:enabled="false"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/plan_another_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_another"
                        android:textAllCaps="false"
                        android:background="@drawable/button2"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:padding="10dp"
                        android:enabled="false"
                        />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>