<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttractionsDisplay"
    android:orientation="vertical">

    <TextView
        android:id="@+id/spt_dis_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/attractions"
        android:fontFamily="@font/merienda_one"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imgSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true"
            />

        <TextView
            android:id="@+id/no_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/found_no_image"
            android:textSize="24sp"
            android:textColor="#FF0000"
            android:visibility="gone"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/spt_dis_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/description2"
        android:textSize="20sp"
        android:justificationMode="inter_word"
        android:textColor="#2B2A2A"
        tools:targetApi="o" />

</LinearLayout>